--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,10 +20,11 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: gition
-        uses: otaviobertucini/gition@v0.15
+        uses: otaviobertucini/gition@v0.16
         with:
           NOTION_SECRET: ${{ secrets.NOTION_SECRET }}
-          NOTION_PAGE: 8da3f433-b0dd-47b2-8821-d9c124c1a356
+          NOTION_PAGES: 8da3f433-b0dd-47b2-8821-d9c124c1a356;3f52f0203a3e4aedb0931227bb485545
+          ROOT_DIR: Notion Articles
 
       - name: Save changes
         uses: stefanzweifel/git-auto-commit-action@v4
