--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: gition
-        uses: otaviobertucini/gition@v0.16
+        uses: otaviobertucini/gition@v0.17
         with:
           NOTION_SECRET: ${{ secrets.NOTION_SECRET }}
           NOTION_PAGES: 3f52f0203a3e4aedb0931227bb485545
@@ -29,4 +29,4 @@ jobs:
       - name: Save changes
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          commit_message: Commit changes
+          commit_message: Commit new content from Notion
