--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,14 +1,9 @@
 # This is a basic workflow to help you get started with Actions
 
-name: NotionJAM
+name: Gition Test
 
 # Controls when the workflow will run
 on:
-  schedule:
-    - cron: "0 21 * * *" # daily
-  push:
-    branches: [master, main]
-
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
@@ -24,23 +19,13 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
 
-      - name: notion-jam
-        uses: victornpb/notion-jam@v0.0.10
+      - name: gition
+        uses: otaviobertucini/gition@v0.17
         with:
           NOTION_SECRET: ${{ secrets.NOTION_SECRET }}
-          NOTION_DATABASE: https://www.notion.so/a2d9364e62a247ab9ecf9a48cef7e6e7?v=985a82ca40244f7e831bf14d3f06cb88
-          FILTER_PROP: Status
-          FILTER_VALUES: Published
-          CONVERT_PROP_CASE: snake
-          ARTICLE_PATH: content/posts/{title}/README.md
-          ASSETS_PATH: ./
-          PARALLEL_PAGES: 25
-          PARALLEL_DOWNLOADS_PER_PAGE: 3
-          DOWNLOAD_IMAGE_TIMEOUT: 30
-          SKIP_DOWNLOADED_IMAGES: true
-          DOWNLOAD_FRONTMATTER_IMAGES: true
-      
+          NOTION_PAGES: 3f52f0203a3e4aedb0931227bb485545;a9f04e83a1844114a5df8a3ab7b8c21e
+
       - name: Save changes
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          commit_message: Commit changes
+          commit_message: Commit new content from Notion
