chore: add ROOT_DIR config

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,7 @@ jobs:
         with:
           NOTION_SECRET: ${{ secrets.NOTION_SECRET }}
           NOTION_PAGES: 3f52f0203a3e4aedb0931227bb485545;a9f04e83a1844114a5df8a3ab7b8c21e
+          ROOT_DIR: Notion Articles
 
       - name: Save changes
         uses: stefanzweifel/git-auto-commit-action@v4
